07-ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: blog-ghost
spec:
  replicas: 1
  strategy:
    type: Recreate # because PVC is ReadWriteOnce and if we have more than one replica, it will fail
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      terminationGracePeriodSeconds: 30 # 30 seconds to allow for proper shutdown
      securityContext:
        fsGroup: 1000 # required for Ghost to write to the content directory
      # first sidecar container to ensure proper permissions on the content directory
      containers:
        - name: ghost
          image: ghost:6.13.2-alpine
          ports:
            - name: http
              containerPort: 2368
          volumeMounts:
            - name: ghost-content
              mountPath: /var/lib/ghost/content

          startupProbe:
            httpGet:
              path: /
              port: 2368
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
            failureThreshold: 30
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: 2368
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 2368
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
            initialDelaySeconds: 60
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
      volumes:
        - name: ghost-content
          persistentVolumeClaim:
            claimName: ghost-content
