04-mysql-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: blog-ghost
spec:
  clusterIP: None # Headless Service to allow for direct connection to the pod
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306 # MySQL service port
      targetPort: 3306 # MySQL container port
