08-ghost-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: blog-ghost
spec:
  selector:
    app: ghost
  ports:
    - name: http
      port: 80 # service port
      targetPort: 2368 # ghost container port
